default-ingressclass.yaml
apiVersion: networking.k8s.io/v1

kind: IngressClass

metadata:

  labels:

    app.kubernetes.io/component: controller

  name: nginx-ingress

  annotations:

    ingressclass.kubernetes.io/is-default-class: "true"

spec:

  controller: k8s.io/ingress-nginx
