gitlab_deploy_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitlab
  namespace: dev
spec:
  ports:
  - port: 443
    targetPort: 443
    name: gitlab443
  - port: 80
    targetPort: 80
    name: gitlab80
  - port: 22
    targetPort: 22
    name: gitlab22
  selector:
    app: gitlab
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gitlab
  namespace: dev
spec:
  selector:
    matchLabels:
      app: gitlab
  revisionHistoryLimit: 2
  template:
    metadata:
      labels:
        app: gitlab
    spec:
      containers:
      - image: gitlab/gitlab-ce:latest
        name: gitlab
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 443
          name: gitlab443
        - containerPort: 80
          name: gitlab80
        - containerPort: 22
          name: gitlab22
        volumeMounts:
        - name: gitlab-persistent-config
          mountPath: /etc/gitlab
        - name: gitlab-persistent-logs
          mountPath: /var/log/gitlab
        - name: gitlab-persistent-data
          mountPath: /var/opt/gitlab
#      imagePullSecrets:
#      - name: devops-repo
      volumes:
      - name: gitlab-persistent-config
        nfs:
          server: 192.168.2.85
          path: /data/devops/gitlab/config
      - name: gitlab-persistent-logs
        nfs:
          server: 192.168.2.85
          path: /data/devops/gitlab/logs
      - name: gitlab-persistent-data
        nfs:
          server: 192.168.2.85
          path: /data/devops/gitlab/data
