ingress-gitlab.yaml
apiVersion: networking.k8s.io/v1 
kind: Ingress
metadata:
  name: gitlab
  namespace: dev
spec:
  rules:
  - host: gitlab.ibaihe.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: gitlab
            port:
              number: 80
  ingressClassName: nginx
