ingress-harbor.yaml
apiVersion: networking.k8s.io/v1 
kind: Ingress
metadata:
  name: harbor
  namespace: dev
spec:
  rules:
  - host: hub.ibaihe.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: harbor
            port:
              number: 80
  ingressClassName: nginx
