ingress-jenkins.yaml
apiVersion: networking.k8s.io/v1 
kind: Ingress
metadata:
  name: jenkins
  namespace: jenkins
spec:
  rules:
  - host: jk.ibaihe.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: jenkins
            port:
              number: 80
  ingressClassName: nginx
